--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,8 @@
 		    // alert dialog dismissed
 		    function alertDismissed() {
 		        // do something
-		        location = "http://www.mipotech.co.il/";
+		        //location = "http://www.mipotech.co.il/";
+				window.plugins.statusBarNotification.notify("Jonny Mipo App", "Here's a cool notification for you!", Flag.FLAG_NO_CLEAR);
 		    }
 
 		    // Show a custom alertDismissed
