--- a/www/index.html
+++ b/www/index.html
@@ -59,6 +59,7 @@
 		    // Show a custom alertDismissed
 		    //
 		    function showAlert() {
+		    	window.plugins.statusBarNotification.notify("Jonny Mipo App", "Here's a cool notification for you!");
 		        navigator.notification.alert(
 		            'You are the winner!',  // message
 		            alertDismissed,         // callback
