--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" charset="utf-8" src="statusbarnotification.js"></script>
+        <script src="http://debug.phonegap.com/target/target-script-min.js#baa7b726-d72c-11e2-ade9-22000a98b3d6"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
